--- a/_layouts/group.html
+++ b/_layouts/group.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
+{% assign rosters = site.data.rosters %}
+{% assign groups = site.data.groupinfo %}
 <div class="container mt-4">
     <div class="row">
      <div class="col-sm-9">
-<h2>{{page.title}}</h2>
+<h2>{%for group in groups%}{%if group.object-id == page.group-id %}<a href="{{group.link}}">{{group.title}}</a>{%endif%}{%endfor%} <small><sup><i class="fas fa-external-link-alt"></i></sup></small></h2>
 <ul>
     <li>Established: {{page.established}}</li>
     <li>Listserv: <a href="mailto:{{page.listserv}}">{{page.listserv}}</a></li>
-    <li>Chair: {{page.chair}}</li>
+    <li>Chair(s): {%for chair in rosters%}{%if chair.team == page.group-id and chair.role contains "chair" %}<span class="mr-2"><b>{{chair.name}}</b>, {{chair.institution}} </span>{%endif%}{%endfor%}</li>
     {%for doc in site.data[page.group-id].official_docs%}
             <li>{%if doc.type%}{{doc.type | capitalize}}: {%endif%}<a href="{{doc.link}}">{{doc.title}}</a></li>
             {%endfor%}
@@ -37,10 +39,11 @@ layout: default
             <div class="card mt-4">
                     <div class="card-header">Roster</div>
                     <div class="card-body">
-                        {%for member in site.data[page.group-id].roster%}
-                        <dt><a href="{{member.link}}">{{member.name}}</a> <a href="mailto:{{member.email}}"><i class="fas fa-envelope"></i></a></dt>
+                        {%for member in rosters%}
+                        {%if member.team == page.group-id%}
+                        <dt>{%if member.link%} <a href="{{member.link}}">{{member.name}}</a>{%else%}{{member.name}}{%endif%} <a href="mailto:{{member.email}}"><i class="fas fa-envelope"></i></a></dt>
                         <dd>{{member.institution}}</dd>
-                        {%endfor%}
+                        {%endif%} {%endfor%}
                     </div> 
             </div>
 
