--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="text-center">
-<a href="{{site.repository}}">GitHub Site</a>
+<footer class="text-center bg-dark text-white p-4">
+<h2><a href="{{site.repository}}">GitHub Site</a></h2>
 </footer>
